--- a/src/back/Cargo.toml
+++ b/src/back/Cargo.toml
@@ -8,7 +8,10 @@ build = "src/back/src/build.rs"
 wry = "0.51"
 winit = "0.30.11"
 tao = "0.33.0"
-# tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 [[bin]]
 name = "taku"
